--- a/app/assets/stylesheets/organization/organization_user_quota.css.scss
+++ b/app/assets/stylesheets/organization/organization_user_quota.css.scss
@@ -51,7 +51,7 @@
   width: 380px;
   color: $cTypography-help;
 }
-.OrganizationUser-quotaInfoLink, .OrganizationUser-renewApiKeyLink {
+.OrganizationUser-quotaInfoLink {
   color: $cTypography-link;
   &:hover {
     text-decoration: underline;
